# SubdirCMake

app/: build.gradle
app/src/androidTest/java/com/hhbgk/subdircmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello.c
app/src/main/cpp/sub/: CMakeLists.txt  subdir.c  subdir.h
app/src/main/cpp/subtract/: CMakeLists.txt
app/src/main/cpp/subtract/inc/: test_subtract.h
app/src/main/cpp/subtract/src/: CMakeLists.txt  test_subtract.c
app/src/main/java/com/hhbgk/subdircmake/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hhbgk/subdircmake/: ExampleUnitTest.java
